# pychess

./: .py  LICENSE  README.md  pyproject.toml
src/pychess-vivifica/: __init__.py  bitboard.py  board.py  castling.py  direction.py  fen.py  move.py  piece.py  square.py
src/pychess-vivifica.egg-info/: PKG-INFO  SOURCES.txt
src/pychess_vivifica.egg-info/: SOURCES.txt  top_level.txt
