[build-system]
requires = ["setuptools>=70.3.0"]
build-backend = "setuptools.build_meta"
[project]
name = "pychess-vivifica"
version = "0.0.1"
authors = [
  { name="Jingyang Wang", email="wangjy2010@126.com" },
]
description = "Python package for chess"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/iwoeix/pychess"
Issues = "https://github.com/iwoeix/pychess/issues"